# bank-transactions-automation

./: README.md  pyproject.toml
src/: __main__.py
