[tool.poetry]
name = "bank-transactions-automation"
version = "0.1.0"
description = ""
authors = ["do-ald533 <doouglas.aldred533@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
selenium = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
